myproject/deploy/yamls/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: django
  name: django
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: port-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: django
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
