myproject/deploy/yamls/java-maven-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: java-maven
  name: java-maven
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: port-9080
      port: 9080
      protocol: TCP
      targetPort: 9080
  selector:
    move2kube.konveyor.io/service: java-maven
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
