myproject/deploy/yamls/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: php
  name: php
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: port-8082
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    move2kube.konveyor.io/service: php
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
