myproject/deploy/yamls/rust-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: rust
  name: rust
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: port-8085
      port: 8085
      protocol: TCP
      targetPort: 8085
  selector:
    move2kube.konveyor.io/service: rust
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
