myproject/deploy/yamls/django-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: django
  name: django
spec:
  host: https://c130-e.us-south.containers.cloud.ibm.com:30958
  path: /django
  port:
    targetPort: port-8080
  to:
    kind: Service
    name: django
    weight: 1
status:
  ingress:
    - {}
