myproject/deploy/yamls/java-gradle-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: java-gradle
  name: java-gradle
spec:
  host: myproject.com
  path: /java-gradle
  port:
    targetPort: port-9080
  to:
    kind: Service
    name: java-gradle
    weight: 1
status:
  ingress:
    - {}
