myproject/deploy/yamls/java-war-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: java-war
  name: java-war
spec:
  host: myproject.com
  path: /java-war
  port:
    targetPort: port-9080
  to:
    kind: Service
    name: java-war
    weight: 1
status:
  ingress:
    - {}
