myproject/deploy/yamls/nodejs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: nodejs
  name: nodejs
spec:
  host: https://c130-e.us-south.containers.cloud.ibm.com:30958
  path: /nodejs
  port:
    targetPort: port-8080
  to:
    kind: Service
    name: nodejs
    weight: 1
status:
  ingress:
    - {}
