myproject/deploy/yamls/php-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: php
  name: php
spec:
  host: myproject.com
  path: /php
  port:
    targetPort: port-8082
  to:
    kind: Service
    name: php
    weight: 1
status:
  ingress:
    - {}
