myproject/deploy/yamls/python-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: python
  name: python
spec:
  host: myproject.com
  path: /python
  port:
    targetPort: port-8080
  to:
    kind: Service
    name: python
    weight: 1
status:
  ingress:
    - {}
