myproject/deploy/yamls/ruby-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: ruby
  name: ruby
spec:
  host: myproject.com
  path: /ruby
  port:
    targetPort: port-8080
  to:
    kind: Service
    name: ruby
    weight: 1
status:
  ingress:
    - {}
