myproject/deploy/yamls/rust-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: rust
  name: rust
spec:
  host: myproject.com
  path: /rust
  port:
    targetPort: port-8085
  to:
    kind: Service
    name: rust
    weight: 1
status:
  ingress:
    - {}
